@@ -244,6 +244,8 @@ PHP 8.4 UPGRADE NOTES
   . curl_version() returns an additional feature_list value, which is an
     associative array of all known Curl features, and whether they are
     supported (true) or not (false).
+  . Added CURL_HTTP_VERSION_3 and CURL_HTTP_VERSION_3ONLY constants (available
+    since libcurl 7.66 and 7.88) as available options for CURLOPT_HTTP_VERSION.
 
 - Date:
   . Added static methods
@@ -880,6 +882,10 @@ PHP 8.4 UPGRADE NOTES
 - Core:
   . PHP_OUTPUT_HANDLER_PROCESSED.
   . PHP_SBINDIR.
+
+- Curl:
+  . CURL_HTTP_VERSION_3.
+  . CURL_HTTP_VERSION_3ONLY.
 
 - Intl:
   . The IntlDateFormatter class exposes now the new PATTERN constant
